# ZonnyHelper

./: .gitignore  .zonny.toml.example  LICENSE  README.md  pyproject.toml  test_out.txt  test_output.txt  test_results.txt
.github/workflows/: ci.yml
src/zonny_helper/: __init__.py  cli.py  exceptions.py
src/zonny_helper/config/: __init__.py  defaults.py  loader.py  schema.py
src/zonny_helper/git/: __init__.py  commands.py
src/zonny_helper/llm/: __init__.py  base.py  cache.py  prompts.py  router.py
src/zonny_helper/llm/providers/: anthropic.py  gemini.py  ollama.py  openai.py
src/zonny_helper/tree/: __init__.py  commands.py
src/zonny_helper/tree/languages/: __init__.py
src/zonny_helper/utils/: __init__.py  file_utils.py  git_utils.py  output.py
tests/: conftest.py
tests/unit/: test_config_commands.py  test_config_loader.py  test_deploy_advisor.py  test_deploy_generator.py  test_deploy_patcher.py  test_deploy_runner.py  test_deploy_scanner.py  test_diff_parser.py  test_env_scanner.py  test_file_utils.py  test_git_commands.py  test_health_checker.py  test_llm_cache.py  test_llm_providers.py  test_tree_builder.py
