# ── Workspace / dev environment ──────────────────────────────────────────────
# This file configures the test runner and linter for the monorepo.
# The publishable packages are:
#   packages/zonny-core   →  pip install zonny-core
#   packages/zonny-ai     →  pip install zonny-ai

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zonny-dev"
version = "0.0.0"
description = "Dev workspace for zonny monorepo (not published)"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=zonny_core --cov=zonny_ai --cov-report=term-missing"
